# unetTracker

./: README.md  multiClassUNetDataset.py  pyproject.toml  requirements.txt  setup.py  trackingProject.py  unetGUI.py
Docker/: Dockerfile
documentation/: colab.md  docker.md  getting_started.md  install.md  ipyevents_test.md  speed_up.md  tracking_project_example.md
notebooks/: 00_create_tracking_project.ipynb  01a_generate_dataset_from_camera.ipynb  01b_generate_dataset_from_saved_video.ipynb  02_inspect_dataset.ipynb  03_create_training_validation_datasets.ipynb  03_data_normalization.ipynb  03_train_unet.ipynb  04_create_training_validation_datasets.ipynb  04_live_unet_refinement.ipynb  04_train_unet.ipynb  05_data_augmentation.ipynb  05_evaluate_model.ipynb  05_train_unet.ipynb  06_evaluate_model.ipynb  06_segmentation_to_coordinates.ipynb  06_train_unet.ipynb  06b_video_unet_refinement.ipynb  07_model_evaluation.ipynb  07_segmentation_to_coordinates.ipynb  07a_live_unet_refinement.ipynb  08_label_videos.ipynb  08_model_evaluation.ipynb  09_track_videos.ipynb  09a_live_unet_refinement.ipynb  09b_video_unet_refinement.ipynb  10_track_videos.ipynb  11_label_videos.ipynb  12_TensorRT.ipynb  12_export_model.ipynb  14_TensorRT.ipynb  15_cropped_network.ipynb  16_extract_problematic_frames.ipynb  17_track_large_cropped.ipynb  create_video_from_webcam.ipynb
src/: camera.py
tracking_project_notebooks/: 00_create_tracking_project.ipynb  01_generate_dataset_from_saved_video.ipynb  02_inspect_dataset.ipynb  03_data_normalization.ipynb  05_data_augmentation.ipynb  (+8 more)
(+24 files in other folders)
