[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unet-tracker"
version = "0.0.1"
authors = [
  { name="Kevin Allen", email="allen@uni-heidelberg.de" },
]
description = "Package to train a U-Net to track objects in videos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/kevin-allen/unet-tracker"
"Bug Tracker" = "https://github.com/kevin-allen/unet-tracker/issues"
